refactor TaskScheduler